Ai initial progress, audit in progress + implementations. New reqs. (Code might not work yet)

--- a/requirements.txt
+++ b/requirements.txt
@@ -11,4 +11,7 @@ plotly          #gráficos interactivos dentro de Flet
 
 # Utilidades y Calidad de Código 
 black           #formatear código automáticamente
-pytest          #pruebas unitarias después
+pytest
+
+python-dotenv
+requests          #pruebas unitarias después
